styling team elements, trying to fix ugly overlap

--- a/resources/style.css
+++ b/resources/style.css
@@ -101,11 +101,13 @@ header .content {
 
 #team-section {
     display: flex;
+    padding: 4rem 5%;
     justify-content: space-around;
 }
 
 .teammember {
     display: flex;
+    justify-content: space-around;
     border: 1px solid rgba(126, 144, 148, .90);
 }
 
